--- a/wp-content/themes/sutunam/scss/component/_sub-category.scss
+++ b/wp-content/themes/sutunam/scss/component/_sub-category.scss
@@ -80,8 +80,9 @@
                 }
                 span {
                     font-size: 12px;
-                    padding: 5px;
+                    padding: 5px 0;
                     line-height: normal;
+                    text-transform: none;
                 }
             }
         }
